[package]
name = "bitmax-rs"
version = "0.1.0"
authors = ["Mikhail Babenko <misha-babenko@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = "1.4.0"
url = "2.1"
failure = "0.1"
serde_json = "1"
log = "0.4"
hmac = "0.8"
sha2 = "0.9"
base64 = "0.12"

[dev-dependencies]
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
env_logger = "0.7"